[package]
name = "astra-stack"
version = "0.1.0"
edition = "2021"
authors = ["Astra"]
license = "MIT"
description = "AstraStack: high-performance data transformation toolkit with a Rust core and C bindings."

[lib]
name = "astra_stack"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "astra-stack-cli"
path = "src/main.rs"
[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

